--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,7 +7,7 @@
     <!-- import the SemanticUI stylesheet -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.5.0/dist/semantic.min.css">
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />   
+    <link rel="stylesheet" href="/style.css">   
   </head>
   <body>
     <section class="ui container">
