🚆🎌 Checkpoint ./models/playlist-store.json:633981/762 ./views/partials/listsongs.hbs:633981/242 ./views/dashboard.hbs:633981/338

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -4,7 +4,7 @@
   
     <h2>About the Playlist App</h2>
       <p>
-        More informatio about the app
+        More information about the app
       </p>
 
 </section>
