--- a/views/start.hbs
+++ b/views/start.hbs
@@ -9,14 +9,14 @@
     <img src="https://cdn.glitch.global/79da02fa-4d20-4467-9d6a-5545c65c3c00/HD-wallpaper-colors-of-music-bars-colorful-measure-sound-refection-abstract-lights-sparkle-beams-rays-bright-beat-color-beats-musical%20(1).jpg?v=1705398704830" class="ui centered image">
 
    <div class="ui five statistics" style="margin-top: 1em;">
-    
+    {{#with info}}
     <div class="statistic">
       <div class="value">
         <i class="music icon"></i> 
       </div>
       <div class="label">
         App Title: <br>
-        {{info.appTitle}}
+        {{appTitle}}
       </div>
     </div>
     
@@ -26,7 +26,7 @@
       </div>
       <div class="label">
         App Version: <br>
-        Version {{info.version}}
+        Version {{version}}
       </div>
     </div>    
      
@@ -37,7 +37,7 @@
       </div>
       <div class="label">
         Made in: <br>
-        {{info.location}}
+        {{location}}
       </div>
     </div>    
     <div class="statistic">
@@ -46,7 +46,7 @@
       </div>
       <div class="label">
         Created by: <br>
-        {{info.creators.0.name}}
+        {{creators.0.name}}
       </div>
     </div> 
     <div class="statistic">
@@ -55,8 +55,9 @@
       </div>
       <div class="label">
         With help from: <br>
-        {{info.creators.1.name}}
+        {{creators.1.name}}
       </div>
     </div> 
+     {{/with}}
   </div>
 </section>
