📠😎 Checkpoint ./views/dashboard.hbs:633981/677 ./views/partials/addplaylist.hbs:633981/286 ./controllers/dashboard.js:633981/767 ./routes.js:633981/62 ./models/playlist-store.js:633981/93 ./models/playlist-store.json:633981/194 ./server.js:633981/723 ./views/partials/listplaylists.hbs:633981/493 ./views/partials/listsongs.hbs:633981/55

--- a/views/partials/listsongs.hbs
+++ b/views/partials/listsongs.hbs
@@ -13,13 +13,13 @@
       {{#each singlePlaylist.songs}}
         <tr>
           <td>
-            {{title}}
+            {{capitalise title}}
           </td>
           <td>
-            {{artist}}
+            {{capitalise artist}}
           </td>
           <td>
-            {{genre}}
+            {{capitalise genre}}
           </td>
           <td>
             {{duration}}
