--- a/views/partials/listplaylists.hbs
+++ b/views/partials/listplaylists.hbs
@@ -12,19 +12,25 @@
     <section class="ui left aligned middle aligned segment">
 
       <h3 class="ui header">
-        {{title}}
+        {{uppercase title}}
       </h3>
       
+      <p>
+      <i class="music icon"></i>
       {{#if songs}}
-        <p>
-          Total songs: {{songs.length}}
-        </p>
-      
-      {{else}}
-        <p>
-          Empty playlist!
-        </p>
+        Total songs:
+        {{songs.length}}
+
+        {{else}}
+        Empty playlist!
       {{/if}}
+
+      {{#if date}}
+        <br>
+        <i class="calendar alternate outline icon"></i>
+        Created on <i>{{formatDate date}}</i>
+      {{/if}}
+    </p>
       
       <a href="/playlist/{{id}}"> View </a>
     </section>
