🗃⛈ Checkpoint ./views/partials/listsongs.hbs:633981/1529 ./controllers/playlist.js:633981/300 ./routes.js:633981/69 ./models/playlist-store.js:633981/103 ./views/playlist.hbs:633981/104

--- a/views/playlist.hbs
+++ b/views/playlist.hbs
@@ -1,9 +1,13 @@
 {{> menu}}
 
+
+
 <section class="ui center aligned middle aligned segment">
+  {{#with singlePlaylist}}
   <h2 class="ui header">
-    {{uppercase singlePlaylist.title}}
+    {{uppercase title}}
   </h2>
   {{> listsongs}}
   {{> addsong}}
+  {{/with}}
 </section>
