--- a/views/partials/listsongs.hbs
+++ b/views/partials/listsongs.hbs
@@ -7,31 +7,37 @@
         <th>Artist</th>
         <th>Genre</th>
         <th>Duration</th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
       {{#each singlePlaylist.songs}}
         <tr>
           <td>
-            {{capitalise title}}
+            {{title}}
           </td>
           <td>
-            {{capitalise artist}}
+            {{artist}}
           </td>
           <td>
-            {{capitalise genre}}
+            {{genre}}
           </td>
           <td>
             {{duration}}
+          </td>
+          <td class="center aligned">
+            <a href="/playlist/{{../singlePlaylist.id}}/deletesong/{{id}}" class="ui icon button" title="Delete song">
+              <i class="ui trash icon"></i>
+            </a>
           </td>
         </tr>
       {{/each}}
     </tbody>
   </table>
 
-  {{else}}
-    <h3 class="ui message">
-      Empty playlist!
-    </h3>
+{{else}}
+  <h3 class="ui message">
+    Empty playlist!
+  </h3>
 
 {{/if}}
