--- a/views/partials/addsong.hbs
+++ b/views/partials/addsong.hbs
@@ -1,4 +1,4 @@
-<form class="ui stacked segment form" action="/playlist/{{singlePlaylist.id}}/addsong" 
+<form class="ui stacked segment form" action="/playlist/{{id}}/addsong" 
       method="POST">
   <div class="four fields">
     <div class="field">
