🐗🚿 Checkpoint ./views/partials/listplaylists.hbs:633981/275 ./controllers/dashboard.js:633981/221 ./models/playlist-store.js:633981/274 ./routes.js:633981/71 ./views/partials/listsongs.hbs:633981/33

--- a/views/partials/listsongs.hbs
+++ b/views/partials/listsongs.hbs
@@ -14,13 +14,13 @@
       {{#each songs}}
         <tr>
           <td>
-            {{title}}
+            {{capitalise title}}
           </td>
           <td>
-            {{artist}}
+            {{capitalise artist}}
           </td>
           <td>
-            {{genre}}
+            {{capitalise genre}}
           </td>
           <td>
             {{duration}}
