--- a/views/partials/listplaylists.hbs
+++ b/views/partials/listplaylists.hbs
@@ -32,7 +32,12 @@
       {{/if}}
     </p>
       
-      <a href="/playlist/{{id}}"> View </a>
+      <a href="/playlist/{{id}}" class="ui icon button">
+          <i class="open folder icon"></i>
+      </a>
+      <a href="/dashboard/deleteplaylist/{{id}}" class="ui icon button"> 
+          <i class="trash icon"></i>
+      </a>
     </section>
   {{/each}}
 
