--- a/views/partials/listsongs.hbs
+++ b/views/partials/listsongs.hbs
@@ -1,36 +1,58 @@
 {{#if songs}}
 
-  <table class="ui fixed striped table">
+  <table class="ui striped table">
     <thead>
       <tr>
-        <th>Song</th>
-        <th>Artist</th>
-        <th>Genre</th>
-        <th>Duration</th>
-        <th></th>
+        <th class="four wide">Song</th>
+        <th class="four wide">Artist</th>
+        <th class="three wide">Genre</th>
+        <th class="three wide">Duration</th>
+        <th class="one wide"> </th>
+        <th class="one wide"> </th>
       </tr>
     </thead>
-    <tbody>
+  <tbody>
       {{#each songs}}
-        <tr>
-          <td>
-            {{capitalise title}}
-          </td>
-          <td>
-            {{capitalise artist}}
-          </td>
-          <td>
-            {{capitalise genre}}
-          </td>
-          <td>
-            {{duration}}
-          </td>
-          <td class="center aligned">
-            <a href="/playlist/{{../id}}/deletesong/{{id}}" class="ui icon button" title="Delete song">
-              <i class="ui trash icon"></i>
-            </a>
-          </td>
-        </tr>
+        <form 
+          class = "ui stacked segment form" 
+          action="/playlist/{{../id}}/updatesong/{{id}}" 
+          method="POST"
+        >
+          <tr class="fields">
+            <td class="field">
+              <span class="ui input">
+               <input type="text" name="title" autofocus required 
+                      title = "Please include a valid Title" placeholder="Title" value = "{{capitalise title}}">
+              </span>
+            </td>
+            <td class="field">
+              <span class="ui input">
+                <input type="text" name="artist" required 
+                       title = "Please include a valid Artist" placeholder="Artist" value = "{{capitalise artist}}">
+              </span>
+            </td>
+            <td class="field">
+              <span class="ui input">
+                <input type="text" name="genre" autofocus required title = "Please include a valid Genre" placeholder="Genre" value = "{{capitalise genre}}">         
+              </span>
+            </td>
+            <td class="field">
+              <span class="ui input">
+                <input type="text" name="duration" required title = "Please enter a valid duration" placeholder="Duration" value = "{{duration}}">
+              </span>
+            </td>
+            <td class="center aligned">
+              <button class="ui submit icon button">
+                <i class="ui pencil icon"></i>
+              </button>
+            </td>
+            <td class="center aligned">
+              <a href="/playlist/{{../id}}/deletesong/{{id}}" class="ui icon button delsong">
+                <i class="ui trash icon"></i>
+              </a>
+            </td>
+          </tr>
+        </form> 
       {{/each}}
     </tbody>
   </table>
