--- a/views/partials/listOneSong.hbs
+++ b/views/partials/listOneSong.hbs
@@ -1,18 +1,18 @@
-<tr>
+<tr id="song">
   <td>
-    {{capitalise title}}
+    {{title}}
   </td>
   <td>
-    {{capitalise artist}}
+    {{artist}}
   </td>
   <td>
-    {{capitalise genre}}
+    {{genre}}
   </td>
   <td>
-    {{capitalise duration}}
+    {{duration}}
   </td>
   <td class="center aligned">
-    <button class="ui icon button" title="Edit song">
+    <button class="ui icon button" title="Edit song" id="showEdit">
       <i class="ui pencil icon"></i>
     </button>
   </td>
