☺️🙉 Checkpoint ./views/partials/editsong.hbs:633981/64 ./views/partials/listOneSong.hbs:633981/64 ./views/partials/listsongs.hbs:633981/952

--- a/views/partials/listOneSong.hbs
+++ b/views/partials/listOneSong.hbs
@@ -1,4 +1,4 @@
-<tr id="song">
+<tr id="song{{@index}}">
   <td>
     {{title}}
   </td>
@@ -12,7 +12,7 @@
     {{duration}}
   </td>
   <td class="center aligned">
-    <button class="ui icon button" title="Edit song" id="showEdit">
+    <button class="ui icon button" title="Edit song" id="showEdit{{@index}}">
       <i class="ui pencil icon"></i>
     </button>
   </td>
