🐒🎿 Checkpoint ./views/partials/editsong.hbs:633981/26

--- a/views/partials/editsong.hbs
+++ b/views/partials/editsong.hbs
@@ -25,12 +25,12 @@
       </span>
     </td>
     <td>
-      <button class="ui submit icon button" id="hideEdit{{@index}}" title="Exit without saving">
+      <button class="ui icon button" id="hideEdit{{@index}}" title="Exit without saving">
         <i class="ui undo icon"></i>
       </button>
     </td>
     <td>
-      <button class="ui submit icon button" title="Save changes">
+      <button class="ui icon button" title="Save changes">
         <i class="ui save icon"></i>
       </button>
     </td>
