--- a/views/partials/listOneSong.hbs
+++ b/views/partials/listOneSong.hbs
@@ -1,12 +1,12 @@
 <tr id="song{{@index}}">
   <td>
-    {{title}}
+    {{capitalise title}}
   </td>
   <td>
-    {{artist}}
+    {{capitalise artist}}
   </td>
   <td>
-    {{genre}}
+    {{capitalise genre}}
   </td>
   <td>
     {{duration}}
