🛩🙈 Checkpoint ./views/layouts/main.hbs:633981/113 ./views/partials/listsongs.hbs:633981/91

--- a/views/partials/listsongs.hbs
+++ b/views/partials/listsongs.hbs
@@ -30,6 +30,9 @@
             });
           });
     </script>
+    <script>
+      document.querySelector("#showEdit{{@index}}")
+    </script>
                 
       {{/each}}
     
