--- a/views/partials/listsongs.hbs
+++ b/views/partials/listsongs.hbs
@@ -18,15 +18,26 @@
         {{> listOneSong playlistId=../id}}
         {{> editsong playlistId=../id}}
     
-
+    <script>
+          $(document).ready(function(){
+            $("#showEdit{{@index}}").click(function(){
+              $("#song{{@index}}").hide();
+              $("#edit{{@index}}").show();
+            });
+            $("#hideEdit{{@index}}").click(function(){
+              $("#song{{@index}}").show();
+              $("#edit{{@index}}").hide();
+            });
+          });
+    </script>
     <script>
       document.querySelector("#showEdit{{@index}}").addEventListener ('click', () => {
-            document.querySelector("#song{{@index}}").style.visibility = "hidden";
-            document.querySelector("#edit{{@index}}").style.visibility = "visible";
+            document.querySelector("#song{{@index}}").style.display = "none";
+            document.querySelector("#edit{{@index}}").style.display = "table-row";
        })
       document.querySelector("#hideEdit{{@index}}").addEventListener ('click', () => {
-            document.querySelector("#song{{@index}}").style.visibility = "visible";
-            document.querySelector("#edit{{@index}}").style.visibility = "hidden";
+            document.querySelector("#song{{@index}}").style.display = "table-row";
+            document.querySelector("#edit{{@index}}").style.display = "none";
        })
     </script>
                 
