--- a/views/partials/listsongs.hbs
+++ b/views/partials/listsongs.hbs
@@ -30,7 +30,7 @@
             });
           });
     </script>
-    <script>
+<!--    <script>
       document.querySelector("#showEdit{{@index}}").addEventListener ('click', () => {
             document.querySelector("#song{{@index}}").style.display = "none";
             document.querySelector("#edit{{@index}}").style.display = "table-row";
@@ -39,7 +39,7 @@
             document.querySelector("#song{{@index}}").style.display = "table-row";
             document.querySelector("#edit{{@index}}").style.display = "none";
        })
-    </script>
+    </script>-->
                 
       {{/each}}
     
