💃💺 Checkpoint ./views/partials/editsong.hbs:633981/49

--- a/views/partials/editsong.hbs
+++ b/views/partials/editsong.hbs
@@ -3,19 +3,19 @@
     <td>
       <span class="ui input">
         <input type="text" name="title" autofocus required
-          title="Please include a valid Title" placeholder="Title" value="{{capitalise title}}" />
+          title="Please include a valid Title" placeholder="Title" value="{{title}}">
       </span>
     </td>
     <td>
       <span class="ui input">
         <input type="text" name="artist" required 
-               title="Please include a valid Artist" placeholder="Artist" value="{{capitalise artist}}" />
+               title="Please include a valid Artist" placeholder="Artist" value="{{artist}}">
       </span>
     </td>
     <td>
       <span class="ui input">
         <input type="text" name="genre" required
-          title="Please include a valid Genre" placeholder="Genre" value="{{capitalise genre}}" />
+          title="Please include a valid Genre" placeholder="Genre" value="{{genre}}">
       </span>
     </td>
     <td>
