🍯🚞 Checkpoint ./views/partials/listsongs.hbs:633981/14 ./views/partials/editsong.hbs:633981/6 ./controllers/playlist.js:633981/4

--- a/views/partials/editsong.hbs
+++ b/views/partials/editsong.hbs
@@ -2,26 +2,26 @@
   <tr class="hide" id="edit{{@index}}">
     <td>
       <span class="ui input">
-        <input type="text" name="title" autofocus required
+        <input type="text" name="etitle" autofocus required
           title="Please include a valid Title" placeholder="Title" value="{{title}}">
       </span>
     </td>
     <td>
       <span class="ui input">
-        <input type="text" name="artist" required 
+        <input type="text" name="eartist" required 
                title="Please include a valid Artist" placeholder="Artist" value="{{artist}}">
       </span>
     </td>
     <td>
       <span class="ui input">
-        <input type="text" name="genre" required
+        <input type="text" name="egenre" required
           title="Please include a valid Genre" placeholder="Genre" value="{{genre}}">
       </span>
     </td>
     <td>
       <span class="ui input">
-        <input type="text" name="duration" required
-          title="Please enter a valid duration" placeholder="Duration" value="{{duration}}" />
+        <input type="text" name="eduration" required
+          title="Please enter a valid duration" placeholder="Duration" value="{{duration}}">
       </span>
     </td>
     <td>
