🐚👢 Checkpoint ./views/partials/editsong.hbs:633981/60 ./views/partials/listOneSong.hbs:633981/8 ./public/script.js:633981/107

--- a/views/partials/listOneSong.hbs
+++ b/views/partials/listOneSong.hbs
@@ -17,7 +17,7 @@
     </button>
   </td>
   <td class="center aligned">
-    <a href="/playlist/{{playlistId}}/deletesong/{{id}}" class="ui icon button"  title="Delete song">
+    <a href="/playlist/{{playlistId}}/deletesong/{{id}}" class="ui icon button delsong"  title="Delete song">
       <i class="ui trash icon"></i>
     </a>
   </td>
