🎅🐕 Checkpoint ./views/partials/editsong.hbs:633981/26 ./views/partials/editplaylist:633981/3918 ./views/partials/editplaylist.hbs:633981/647 ./routes.js:633981/95 ./views/partials/listOnePlaylst.hbs:633981/725 ./views/partials/listplaylists.hbs:633981/268 ./controllers/dashboard.js:633981/1008

--- a/views/partials/editsong.hbs
+++ b/views/partials/editsong.hbs
@@ -30,7 +30,7 @@
       </button>
     </td>
     <td>
-      <button class="ui icon button" title="Save changes">
+      <button type = "submit" class="ui icon button" title="Save changes">
         <i class="ui save icon"></i>
       </button>
     </td>
