--- a/views/partials/listplaylists.hbs
+++ b/views/partials/listplaylists.hbs
@@ -38,6 +38,12 @@
       <a href="/dashboard/deleteplaylist/{{id}}" class="ui icon button"> 
           <i class="trash icon"></i>
       </a>
+       <a href="/dashboard/deleteplaylist/{{id}}" class="ui icon button"> 
+          <i class="trash icon"></i>
+      </a>
+    <button class="ui icon button" title="Edit playlist" id="showEdit{{@index}}">
+      <i class="ui pencil icon"></i>
+    </button>
     </section>
   {{/each}}
 
