--- a/views/partials/listplaylists.hbs
+++ b/views/partials/listplaylists.hbs
@@ -38,13 +38,23 @@
       <a href="/dashboard/deleteplaylist/{{id}}" class="ui icon button"> 
           <i class="trash icon"></i>
       </a>
-       <a href="/dashboard/deleteplaylist/{{id}}" class="ui icon button"> 
-          <i class="trash icon"></i>
-      </a>
     <button class="ui icon button" title="Edit playlist" id="showEdit{{@index}}">
       <i class="ui pencil icon"></i>
     </button>
     </section>
+  
+  <script>
+         document.querySelector("#showEdit{{@index}}").addEventListener ('click', () => {
+                                console.log("yes")
+            //document.querySelector("#song{{@index}}").style.display = "none";
+            document.querySelector("#edit{{@index}}").style.display = "table-row";
+         })
+         document.querySelector("#hideEdit{{@index}}").addEventListener ('click', () => {
+                                console.log("no")
+            document.querySelector("#song{{@index}}").style.display = "table-row";
+            document.querySelector("#edit{{@index}}").style.display = "none";
+         })
+        </script>
   {{/each}}
 
 </section>
