--- a/views/partials/editplaylist.hbs
+++ b/views/partials/editplaylist.hbs
@@ -1,5 +1,5 @@
 <form class="ui stacked segment form" action="dashboard/updateplaylist/{{playlistId}}" method="POST">
-  <tr class="hide" id="editp{{@index}}">
+  <tr class="hide" id="edit{{@index}}">
     <td>
       <span class="ui input">
         <input type="text" name="title" autofocus required
