--- a/views/partials/editplaylist.hbs
+++ b/views/partials/editplaylist.hbs
@@ -1,7 +1,7 @@
-<form class="ui stacked segment form" action="dashboard/updateplaylist/{{playlistId}}" method="POST">
-  <table class="hide" id="edit{{@index}}">
-    
-<tr>
+<section class="hide" id="edit{{@index}}">
+ <form class="ui stacked segment form" action="dashboard/updateplaylist/{{playlistId}}" method="POST">
+  <table>    
+  <tr>
     <td>
       <span class="ui input">
         <input type="text" name="title" autofocus required
@@ -18,6 +18,7 @@
         <i class="ui save icon"></i>
       </button>
     </td>
-  </tr>
-</table>
-</form>
+   </tr>
+  </table>
+ </form>
+</section>
