--- a/views/partials/listOnePlaylist.hbs
+++ b/views/partials/listOnePlaylist.hbs
@@ -24,7 +24,7 @@
       <a href="/playlist/{{id}}" class="ui icon button">
           <i class="open folder icon"></i>
       </a>
-      <a href="/dashboard/deleteplaylist/{{id}}" class="ui icon button"> 
+      <a href="/dashboard/deleteplaylist/{{id}}" class="ui icon button delplaylist"> 
           <i class="trash icon"></i>
       </a>
     <button class="ui icon button" title="Edit playlist" id="showEdit{{@index}}">
