👕📷 Checkpoint ./views/about.hbs:633981/101 ./controllers/about.js:633981/460

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -31,7 +31,7 @@
           
          <div class="statistic">
             <div class="value">
-              <i class="yellow music icon"></i> 
+              <i class="yellow fast forward icon"></i> 
             </div>
             <div class="label">
               {{average}} average songs per playlist
@@ -46,7 +46,7 @@
         <div class="ui centered two statistics">
           <div class="statistic">
             <div class="value">
-              <i class="blue microphone icon"></i> 
+              <i class="blue plus square outline icon"></i> 
             </div>
             <div class="label">
               largest playlist:{{largest}} 
@@ -56,7 +56,7 @@
           
          <div class="statistic">
             <div class="value">
-              <i class="green music icon"></i> 
+              <i class="green minus square outline icon"></i> 
             </div>
             <div class="label">
               smallest playlist:{{smallest}} 
