🎒😬 Checkpoint ./controllers/about.js:633981/718 ./models/playlist-store.json:633981/3288 ./views/about.hbs:633981/2

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -49,7 +49,7 @@
               <i class="blue plus square outline icon"></i> 
             </div>
             <div class="label">
-              largest playlist:{{largest}} 
+              largest playlists:{{largest}} 
             </div>
           </div>
 
@@ -59,7 +59,7 @@
               <i class="green minus square outline icon"></i> 
             </div>
             <div class="label">
-              smallest playlist:{{smallest}} 
+              smallest playlists:{{smallest}} 
             </div>
           </div> 
         </div>    
