--- a/views/start.hbs
+++ b/views/start.hbs
@@ -1,7 +1,9 @@
 {{> menu}}
 
 <section class="ui center aligned middle aligned segment">
-  <h2>Welcome to the Playlist App!</h2>
+  <h2 class="ui header">
+  Welcome to the Playlist App, {{fullname}}!
+</h2>
     <p>
       This app will allow users to create and maintain a collection of playlists.
     </p>
