--- a/views/partials/listOnePlaylist.hbs
+++ b/views/partials/listOnePlaylist.hbs
@@ -1,8 +1,13 @@
 <section class="ui left aligned middle aligned segment" id="playlist{{@index}}">
+  
+   <div class="ui card">
+      <div class="image">
+        <img src="{{picture}}">
+      </div>
 
-      <h3 class="ui header">
-        {{uppercase title}}
-      </h3>
+      <div class="content">
+        <a class="header"> {{uppercase title}}</a>
+     
       
       <p>
       <i class="music icon"></i>
@@ -20,7 +25,8 @@
         Created on <i>{{formatDate date}}</i>
       {{/if}}
     </p>
-      
+       </div>
+     <div class="extra content">
       <a href="/playlist/{{id}}" class="ui icon button">
           <i class="open folder icon"></i>
       </a>
@@ -30,5 +36,7 @@
     <button class="ui icon button" title="Edit playlist" id="showEdit{{@index}}">
       <i class="ui pencil icon"></i>
     </button>
+     </div>
+  </div>
 
 </section>
