👛🐀 Checkpoint ./controllers/accounts.js:633981/44 ./views/partials/menu.hbs:633981/84 ./controllers/about.js:633981/43 ./controllers/dashboard.js:633981/54 ./controllers/playlist.js:633981/70 ./controllers/start.js:633981/56 ./public/style.css:633981/97

--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,6 +1,7 @@
 <nav class="ui menu">
   <header class="ui header item"> <a href="/start"> Playlist App </a></header>
   <div class="right menu">
+    <span class="profilepic"><img src="{{picture}}" class="ui avatar image"></span>
     <span class="name">{{fullname}}</span>
     <a id="dashboard" class="item" href="/dashboard"> Dashboard  </a>
     <a id="about" class="item" href="/about"> About </a>
