--- a/views/partials/editplaylist.hbs
+++ b/views/partials/editplaylist.hbs
@@ -3,6 +3,7 @@
   <table>    
   <tr>
     <td>
+      <img src="{{picture}}" class="ui medium image">
       <span class="ui input">
         <input type="text" name="title" autofocus required
           title="Please include a valid Title" placeholder="Title" value="{{title}}">
