👴☔️ Checkpoint ./views/partials/editplaylist.hbs:633981/21 ./models/playlist-store.json:633981/754

--- a/views/partials/editplaylist.hbs
+++ b/views/partials/editplaylist.hbs
@@ -3,7 +3,7 @@
   <table>    
   <tr>
     <td>
-      <img src="{{picture}}" class="ui medium image">
+      <img src="{{picture}}" class="ui small image">
       <span class="ui input">
         <input type="text" name="title" autofocus required
           title="Please include a valid Title" placeholder="Title" value="{{title}}">
