--- a/views/partials/listplaylists.hbs
+++ b/views/partials/listplaylists.hbs
@@ -11,6 +11,38 @@
   
 
   {{#each playlists}}
+    <div class="ui card">
+    <div class="image">
+      <img src="{{picture}}">
+    </div>
+    <div class="content">
+      <a class="header"> {{uppercase title}}</a>
+      <p>
+        <i class="music icon"></i>
+        {{#if songs}}
+          Total songs:{{songs.length}}
+        {{else}}
+          Empty playlist!
+        {{/if}}
+        {{#if date}}
+          <br>
+          <i class="calendar alternate outline icon"></i>
+          Created on <i>{{formatDate date}}</i>
+        {{/if}}
+      </p>
+    </div>
+    <div class="extra content">
+      <a href="/playlist/{{id}}" class="ui icon button">
+        <i class="open folder icon"></i>
+      </a>
+      <a href="/dashboard/deleteplaylist/{{id}}" class="ui icon button">
+        <i class="trash icon"></i>
+      </a>
+    </div>
+   </div>
+  {{/each}}
+  
+  
        {{> listOnePlaylist playlistId=id}}
        {{> editplaylist playlistId=id}}
  
