--- a/views/partials/addplaylist.hbs
+++ b/views/partials/addplaylist.hbs
@@ -6,7 +6,7 @@
     </div>
     <div class="field">
       <label>Image</label>
-      <input placeholder="Image" type="file" name="picture" >
+      <input placeholder="Image" type="file" name="picture" required>
     </div>
   </div>
   <button class="ui blue submit button">Add Playlist</button>
