💾👘 Checkpoint ./views/partials/listplaylists.hbs:633981/2207 ./.data/.env.json:633981/181

--- a/views/partials/listplaylists.hbs
+++ b/views/partials/listplaylists.hbs
@@ -1,34 +1,44 @@
 <section class="ui left aligned middle aligned segment">
-  
+
   <h2>Playlist App Dashboard</h2>
-  
+
   {{#unless playlists}}
     <h3 class="ui message">
       Start adding your playlists!
     </h3>
   {{/unless}}
-<div class = "ui centered cards">
-  
+  <div class="ui centered cards">
+    {{#each playlists}}
+      <div class="ui card">
+        <div class="image">
+          <img src="{{picture}}">
+        </div>
+        <div class="content">
+          <a class="header">{{uppercase title}}</a>
+          <p>
+            <i class="music icon"></i>
+            {{#if songs}}
+              Total songs: {{songs.length}}
+            {{else}}
+              Empty playlist!
+            {{/if}}
 
-  {{#each playlists}}
-  
-
-       {{> listOnePlaylist playlistId=id}}
-       {{> editplaylist playlistId=id}}
- 
-  
-  <script>
-         document.querySelector("#showEdit{{@index}}").addEventListener ('click', () => {
-                          
-            document.querySelector("#playlist{{@index}}").style.display = "none";
-            document.querySelector("#edit{{@index}}").style.display = "block";
-         })
-         document.querySelector("#hideEdit{{@index}}").addEventListener ('click', () => {
-                                
-            document.querySelector("#playlist{{@index}}").style.display = "block";
-            document.querySelector("#edit{{@index}}").style.display = "none";
-         })
-        </script>
-  {{/each}}
+            {{#if date}}
+              <br>
+              <i class="calendar alternate outline icon"></i>
+              Created on <i>{{formatDate date}}</i>
+            {{/if}}
+          </p>
+        </div>
+        <div class="extra content">
+          <a href="/playlist/{{id}}" class="ui icon button">
+            <i class="icon folder open"></i>
+          </a>
+          <a href="/dashboard/deleteplaylist/{{id}}" class="ui icon button">
+            <i class="icon trash"></i>
+          </a>
+        </div>
+      </div>
+    {{/each}}
   </div>
 </section>
