--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,8 +4,8 @@
   
   <div class="ui center aligned grid">
     <div class="ui eight wide column">
-      <h2 class="ui center aligned header">The Playlist App now contains:</h2>
-      <div class="ui two statistics">
+      <h2 class="ui center aligned header">The Playlist App contains:</h2>
+      <div class="ui three statistics">
           <div class="ui huge statistic">
               <div class="value">
                   {{totalPlaylists}}
@@ -20,6 +20,14 @@
               </div>
               <div class="label">
                   Songs
+              </div>
+          </div>
+          <div class="ui huge statistic">
+              <div class="value">
+                  {{totalUsers}}
+              </div>
+              <div class="label">
+                  Users
               </div>
           </div>
       </div>
